[project]
name = "exponential-core"
version = "0.1.4"
description = "Librería compartida para excepciones, logging y utilidades comunes de Exponential IT"
authors = [{ name = "Equipo Exponential IT", email = "dev@exponential.com" }]
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "colorlog"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
