[project]
name = "exponential-core"
version = "0.1.9"
description = "Librería compartida para excepciones, logging y utilidades comunes de Exponential IT"
authors = [{ name = "Equipo Exponential IT", email = "john.rincon@exponentialit.net" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["exceptions", "logging", "utilities", "fastapi", "exponential"]

dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "colorlog",
    "boto3"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["exponential_core*"]
exclude = ["tests*", "docs*", "env*", "__pycache__*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
